style: criando pasta das figuras e exportando do figma.

--- a/home/home.html
+++ b/home/home.html
@@ -28,7 +28,7 @@
 
   <section class="secao-principal">
     <div class="hero-imagem">
-      <img src="imagem-hero.jpg" alt="Pessoas fazendo compostagem">
+      <img src="figuras, imagens e afins/imgcompost.svg" alt="Pessoas fazendo compostagem">
     </div>
     <div class="descricao">
       <h1>Compostar é Cuidar da Terra e da Comunidade</h1>
