commit -m adicionado scroll de navegação para âncora"

--- a/home/home.html
+++ b/home/home.html
@@ -17,7 +17,7 @@
         <li><a href="#">Início</a></li>
         <li><a href="#sobre">Sobre compostagem</a></li>
         <li><a href="#como-fazer">Como fazer</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="#contato">Conteúdo</a></li>
       </ul>
       <div class="botoes">
         <button class="btn-entrar">Entrar</button>
@@ -79,6 +79,40 @@
   </section>
   </div>
 
+<!-- Tipos de Compostagem -->
+<section id="tipos" class="secao-tipos">
+  <h2>Tipos de Compostagem</h2>
+  <div class="tipos-conteudo">
+    <img src="img3.png" alt="Tipos de compostagem">
+    <p>
+      Existem diversos tipos de compostagem que se adaptam a diferentes espaços e necessidades. Seja em casa, no quintal, na feira ou em um espaço comunitário, sempre há um método ideal para transformar resíduos orgânicos em adubo de qualidade. Aprenda sobre as técnicas e escolha a melhor para você!
+    </p>
+  </div>
+</section>
+
+<!-- Perguntas Frequentes -->
+<section id="faq" class="secao-faq">
+  <h2>Perguntas Frequentes</h2>
+  <div class="faq-item">
+    <p class="pergunta">O que é compostagem?</p>
+    <p class="resposta">
+      A compostagem é o processo de transformação de resíduos orgânicos em um adubo natural rico em nutrientes para o solo.
+    </p>
+  </div>
+  <div class="faq-item">
+    <p class="pergunta">Quais materiais posso compostar?</p>
+    <p class="resposta">
+      Restos de frutas, verduras, cascas de ovos, borra de café, folhas secas e pequenos galhos.
+    </p>
+  </div>
+  <div class="faq-item">
+    <p class="pergunta">Por que fazer compostagem?</p>
+    <p class="resposta">
+      Reduz o lixo enviado a aterros, evita poluição, melhora o solo e ajuda a combater as mudanças climáticas.
+    </p>
+  </div>
+</section>
+
   <footer class="rodape">
     <p>&copy; 2025 Compostagem Sustentável</p>
   </footer>
@@ -90,5 +124,7 @@
     toggle.addEventListener('click', () => janela.classList.toggle('hidden'));
     fechar.addEventListener('click', () => janela.classList.add('hidden'));
   </script>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
