style: adicionando imagens

--- a/home/home.html
+++ b/home/home.html
@@ -39,22 +39,22 @@
 
   <section class="secao-destaques">
     <div class="destaque">
-      <img src="icon-beneficios.svg" alt="Benefícios para a comunidade">
+      <img src="figuras, imagens e afins/img8.png" alt="Benefícios para a comunidade">
       <h3>Benefícios para comunidade</h3>
       <a href="#" class="btn-destaque">Saiba mais</a>
     </div>
     <div class="destaque">
-      <img src="icon-tecnicas.svg" alt="Técnicas de compostagem">
+      <img src="figuras, imagens e afins/img10.png" alt="Técnicas de compostagem">
       <h3>Técnicas de Compostagem</h3>
       <a href="#" class="btn-destaque">Saiba mais</a>
     </div>
     <div class="destaque">
-      <img src="icon-materiais.svg" alt="Materiais e cuidados">
+      <img src="figuras, imagens e afins/img9.png" alt="Materiais e cuidados">
       <h3>Materiais e Cuidados</h3>
       <a href="#" class="btn-destaque">Saiba mais</a>
     </div>
     <div class="destaque">
-      <img src="icon-jogar.svg" alt="Aprenda jogando">
+      <img src="figuras, imagens e afins/img12.png" alt="Aprenda jogando">
       <h3>Aprenda jogando em nossa plataforma</h3>
       <a href="#" class="btn-jogar">Jogar</a>
     </div>
