style: adicionando imagens no campo noticiais

--- a/home/home.html
+++ b/home/home.html
@@ -64,15 +64,15 @@
     <h2>Notícias</h2>
     <div class="noticias-grid">
       <article class="noticia">
-        <img src="noticia1.jpg" alt="Descarte de resíduos">
+        <img src="figuras, imagens e afins/img5.jpeg" alt="Descarte de resíduos">
         <p>Brasil produz cerca de 800 milhões de toneladas de resíduos orgânicos por ano, diz o Plano Nacional de Resíduos Sólidos.</p>
       </article>
       <article class="noticia">
-        <img src="noticia2.jpg" alt="Lixo orgânico">
+        <img src="figuras, imagens e afins/img6.jpeg" alt="Lixo orgânico">
         <p>Apenas 1% do lixo orgânico é reaproveitado no Brasil. Os dados foram publicados pela Associação Brasileira das Empresas de Limpeza Pública e Resíduos Especiais.</p>
       </article>
       <article class="noticia">
-        <img src="noticia3.jpg" alt="Desperdício de alimentos">
+        <img src="figuras, imagens e afins/image 6.png" alt="Desperdício de alimentos">
         <p>Todos os anos, 1,3 bilhões de toneladas de alimentos são perdidas ou desperdiçadas no mundo, segundo o Índice de Desperdício de Alimentos do Programa das Nações Unidas para o Meio Ambiente (PNUMA).</p>
       </article>
     </div>
