style: adicionando mais fotos

--- a/home/home.html
+++ b/home/home.html
@@ -83,7 +83,7 @@
 <section id="tipos" class="secao-tipos">
   <h2>Tipos de Compostagem</h2>
   <div class="tipos-conteudo">
-    <img src="img3.png" alt="Tipos de compostagem">
+    <img src="figuras, imagens e afins/tiposdecompostagem.jpeg" alt="Tipos de compostagem">
     <p>
       Existem diversos tipos de compostagem que se adaptam a diferentes espaços e necessidades. Seja em casa, no quintal, na feira ou em um espaço comunitário, sempre há um método ideal para transformar resíduos orgânicos em adubo de qualidade. Aprenda sobre as técnicas e escolha a melhor para você!
     </p>
