style: add e reajuste na pagina

--- a/home/home.html
+++ b/home/home.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Compostagem</title>
-  <!-- Ajuste de caminho: se o CSS estiver na pasta acima de home.html -->
   <link rel="stylesheet" href="../home.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,6 +13,8 @@
   <header class="cabecalho">
     <nav class="navegacao">
       <ul>
+        <img src="figuras, imagens e afins/img4.png" alt="logohumus" class="img-logo">
+        <img src="figuras, imagens e afins/img3.png" alt=" ecohumus" class="img-nome"> 
         <li><a href="#">Início</a></li>
         <li><a href="#sobre">Sobre compostagem</a></li>
         <li><a href="#como-fazer">Como fazer</a></li>
